--- a/back/package.json
+++ b/back/package.json
@@ -5,16 +5,28 @@
   "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev:server": "nodemon --watch './**/*.ts' --exec 'ts-node' app.ts"
+    "dev:server": "nodemon --watch './**/*.ts' --exec 'ts-node' app.ts",
+    "format": "prettier --write \"./**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"./**/*.ts\" --fix"
   },
   "author": "Vanessa Zapata",
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
+    "argon2": "^0.30.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.10.0",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.3.12",
     "typescript": "^5.0.3"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.57.0",
+    "@typescript-eslint/parser": "^5.57.0",
+    "eslint": "^8.37.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^4.2.1"
   }
 }
