--- a/back/package.json
+++ b/back/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev:server": "nodemon --watch './**/*.ts' --exec 'ts-node' app.ts",
-    "format": "prettier --write \"./**/*.ts\" \"test/**/*.ts\"",
+    "format": "prettier --write \"./**/*.ts\"",
     "lint": "eslint \"./**/*.ts\" --fix"
   },
   "author": "Vanessa Zapata",
@@ -15,6 +15,7 @@
     "@types/express": "^4.17.17",
     "@types/node": "^18.15.11",
     "argon2": "^0.30.3",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "pg": "^8.10.0",
