--- a/back/package.json
+++ b/back/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "dependencies": {
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.15.11",
     "argon2": "^0.30.3",
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.10.0",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.3.12",
