--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,14 +39,25 @@ services:
     ports:
       - "3000:3000"
     container_name: nodejs_c
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_HOST=${POSTGRES_HOST}
+      - POSTGRES_PORT=${POSTGRES_PORT}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - TOKEN_SECRET=${TOKEN_SECRET}
+      - EXPIRE_TIME_TOKEN=${EXPIRE_TIME_TOKEN}
+      - MAX_WORDS_QUANTITY=${MAX_WORDS_QUANTITY}
+      - PORT=${PORT}
+    # env_file:
+    #   - .env
     volumes:
       - type: bind
         source: ./back/
         target: /usr/src/app/back/
     restart: unless-stopped
-    command: tail -f /dev/null
+    command: npm run dev:server
+    # command: tail -f /dev/null
     networks: 
      - internal
 networks: 
