--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,15 +7,15 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Set up Docker Compose
-        uses: docker/compose-action@v2
+        uses: actions/checkout@v3
+  
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
         with:
-          compose-file: docker-compose.yml
-          project-name: myapp
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Start services
+      - name: Deploy app with Docker Compose
         run: docker-compose up --build
         env:
           POSTGRES_HOST: ${{ vars.POSTGRES_HOST }}
