--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,12 +11,12 @@ jobs:
   
       - name: Login to Docker Hub
         uses: docker/login-action@v2
-        with:
+        env:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
 
       - name: Deploy app with Docker Compose
-        run: docker-compose up --build
+        run: docker-compose up -d
         env:
           POSTGRES_HOST: ${{ vars.POSTGRES_HOST }}
           POSTGRES_PORT: ${ vars.POSTGRES_PORT }}
