--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,6 @@ services:
       - 5432:5432
     volumes:
       - pgdata:/var/lib/postgresql/data/
-    # healthcheck:
-    #   test: ["CMD-SHELL", "sh -c 'pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}'"]
-    #   interval: 10s
-    #   timeout: 3s
-    #   retries: 3
     restart: unless-stopped
   dbadmin:
     image: dpage/pgadmin4
@@ -38,25 +33,14 @@ services:
     ports:
       - 3000:3000
     container_name: nodejs_c
-    environment:
-      - POSTGRES_HOST=${POSTGRES_HOST}
-      - POSTGRES_PORT=${POSTGRES_PORT}
-      - POSTGRES_USER=${POSTGRES_USER}
-      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
-      - POSTGRES_DB=${POSTGRES_DB}
-      - TOKEN_SECRET=${TOKEN_SECRET}
-      - EXPIRE_TIME_TOKEN=${EXPIRE_TIME_TOKEN}
-      - MAX_WORDS_QUANTITY=${MAX_WORDS_QUANTITY}
-      - PORT=${PORT}
-    # env_file:
-    #   - .env
+    env_file:
+      - .env
     volumes:
       - type: bind
         source: ./back/
         target: /usr/src/app/back/
     restart: unless-stopped
     command: npm run dev:server
-    # command: tail -f /dev/null
     networks: 
      - internal
 networks: 
